# splat

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  create_config.py  disassembler_section.py  makefile_template.txt  pyproject.toml  requirements.txt  run_tests.sh  split.py  test.py  test_gen_expected.sh  test_n64_entrypoints.py  test_win32_pe.py
.github/workflows/: black.yml  format.yml  lint.yml  mypy.yml  publish_docs_to_wiki.yml  pypi.yml  test_lib.yml  unit_tests.yml
Documentation/: Install.md
Source/: requirements.txt
Source/segtypes/n64/: hasm.py
Source/util/: options.py
disassembler/: disassembler.py  disassembler_instance.py  null_disassembler.py  spimdisasm_disassembler.py
docs/: Adding-Symbols.md  Advanced-Reloc.md  Advanced.md  Configuration.md  Examples.md  General-Workflow.md  Home.md  Quickstart-Elf.md  Quickstart.md  Segments.md  VramClasses.md
segtypes/: PaperMarioMapFS.py  PaperMarioMessages.py  PaperMarioNpcSprites.py  Yay0.py  asm.py  bin.py  c.py  ci4palette.py  ci8.py  ci8palette.py  code.py  header.py  linker_entry.py  palette.py  rgba16.py  segment.py
segtypes/common/: asm.py  bin.py  bss.py  c.py  code.py  codesubsegment.py  compressedsegment.py  cpp.py  data.py  data_with_rodata.py  data_within_rodata.py  decompressor.py  group.py  hasm.py  lib.py  linker_section.py  pad.py  rdata.py  rodata.py  rodata_with_data.py  rodata_within_data.py  textbin.py  zlib.py
segtypes/gc/: apploader.py  bi2.py  bootinfo.py  dol.py  dolheader.py  fst.py  rarc.py  relheader.py  relsectioninfo.py
segtypes/n64/: Yay0.py  asm.py  bin.py  bss.py  c.py  ci.py  ci8.py  code.py  codesubsegment.py  data.py  gfx.py  group.py  hasm.py  header.py  i1.py  i4.py  i8.py  ia1.py  ia16.py  ia4.py  ia8.py  img.py  linker_offset.py  mio0.py  palette.py  rgba16.py  rgba32.py  vtx.py  yay0.py
segtypes/n64/pygfxd/: .gitignore  .gitrepo  LICENSE  Makefile  README.md  pygfxd.py  test.py
segtypes/n64dd/: asm.py
segtypes/psx/: asm.py  header.py
src/splat/: __init__.py  __main__.py
src/splat/disassembler/: __init__.py  capstone_disassembler.py  disassembler.py  disassembler_instance.py  disassembler_section.py  null_disassembler.py  spimdisasm_disassembler.py  wasm_disassembler.py
src/splat/scripts/: __init__.py  capy.py  create_config.py  split.py  win32_reassemble.py
src/splat/segtypes/: __init__.py  linker_entry.py  segment.py
src/splat/util/: __init__.py  cache_handler.py  color.py  compiler.py  conf.py  file_presets.py  log.py  options.py  palettes.py  progress_bar.py  relocs.py  statistics.py  symbols.py  utils.py  vram_classes.py
test/: Dockerfile  README.md  test.py  test_gen_expected.sh
test-binaries/: .gitignore
test-binaries/zoo/: README.md
test/basic_app/: .gitignore  Makefile  basic_app.ld  build.sh  clean.sh  main.c  n64.yaml  splat.yaml
test/basic_app/expected/: .splache  basic_app.d  basic_app.ld  func_004001DC.s
test/win32_app/: .gitignore  generate.py  splat.yaml  test_win32.py
test/win32_app64/: .gitignore  generate.py  splat.yaml
tools/spimdisasm/: .gitignore  .gitrepo  README.md  disasmdis.py  elfObjDisasm.py  mypy.ini  simpleDisasm.py  singleFileDisasm.py
tools/spimdisasm/spimdisasm/: __init__.py  __main__.py
util/: Yay0Decompress  Yay0decompress.py  color.py  compiler.py  disasm.py  find_code_length.py  floats.py  ld.py  log.py  options.py  palettes.py  progress_bar.py  range.py  relocs.py  rominfo.py  symbols.py  vram_classes.py
util/gc/: gcfst.py  gcinfo.py  gcsplit.py
util/n64/: Mio0decompress.py  Yay0decompress.py  __init__.py  find_code_length.py  rominfo.py
util/psx/: psxexeinfo.py
(+192 files in other folders)
