[project]
name = "splat64"
# Should be synced with src/splat/__init__.py
version = "0.37.0"
description = "A binary splitting tool to assist with decompilation and modding projects"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "PyYAML==6.0.3",
    "pylibyaml==0.1.0",
    "tqdm==4.67.1",
    "intervaltree==3.1.0",
    "colorama==0.4.6",
]

[project.optional-dependencies]
mips = [
    "spimdisasm>=1.39.0,<2.0.0", # This value should be keep in sync with the version listed on disassembler/spimdisasm_disassembler.py
    "rabbitizer>=1.12.0,<2.0.0",
    "pygfxd>=1.0.5",
    "n64img>=0.3.3",
    "crunch64>=0.5.1,<1.0.0",
]
dev = [
    "splat64[mips]",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-colorama",
]

[project.urls]
Repository = "https://github.com/ethteck/splat"
Issues = "https://github.com/ethteck/splat/issues"
Changelog = "https://github.com/ethteck/splat/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splat"]

[tool.hatch.envs.dev]
features = ["dev"]

[project.scripts]
splat = "splat.__main__:splat_main"
